fix(style): handle z-index of RecHeader, has to lt than .bili-header z-1002

--- a/src/common/_css-vars.scss
+++ b/src/common/_css-vars.scss
@@ -43,7 +43,7 @@ $app-video-card-border-radius-id: --#{$app-name}--video-card--border-radius;
 //
 // z-index
 //
-$z-index-rec-header: 10000; // Evolved custom-header z-index:10001
+$z-index-rec-header: 1001; // Evolved custom-header z-index:10001; .bili-header__bar z-index:1002;
 $z-index-base-modal: 10003;
 $z-index-antd-popup-base: 11000;
 $z-index-video-card-large-preview: 12000;
